# data-mining-lab-1

./: .gitignore  README.md  pyproject.toml  requirements.txt  resolution.ipynb
extras/: instructions.ipynb
