[tool.poetry]
name = "resolution"
version = "0.1.0"
description = "University evaluation"
authors = ["Daniela Corcuera"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
